# lib/db/src/schema/index.ts
@@ -16,4 +16,5 @@ export * from "./post-syndications.ts";
 export * from "./platform-oauth-apps.ts";
 export * from "./art-pieces.ts";
 export * from "./media-assets.ts";
+export * from "./exhibits.ts";
 export * from "../lib/reserved-slugs.ts";
